--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="tabs-sections">
                <!-- tab 1 -->
 
-              <div class="tabs-content" id="tab-1">
+              <div class="tabs-content" class="active">
                 <div class="tab-left">
                   <div class="tab-left-1">
 
